--- a/styles/components/bio.css
+++ b/styles/components/bio.css
@@ -1,10 +1,10 @@
 .bio__text {
   margin-bottom: 10px;
-  line-height: 20px;
+  line-height: 1.8rem;
 }
 
 @media (min-width: 600px) {
   .bio__text {
-    line-height: 25px;
+    line-height: 2rem;
   }
 }
